# Polymarket-Bot

./: .env.example  .env.production.example  .env.sqlite.example  .gitignore  README.docker.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_redeem_records.py  0003_wallet_credentials.py  0004_multi_user_foundation.py  0005_bot_running.py  0006_settlement_resolution_fields.py
backend/app/: __init__.py  celery_app.py  cli.py  main.py
backend/app/admin_panel/: __init__.py  forms.py  registry.py  routes.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit.py  market.py  order.py  redeem.py  settings.py  settlement.py  strategy.py  tick.py  user.py  wallet.py
backend/app/schemas/: audit.py  auth.py  errors.py  execution.py  market.py  order.py  orderbook.py  pnl.py  redeem.py  settings.py  strategy.py  tick.py  trading.py  wallet.py  websocket.py
backend/app/scripts/: create_admin_user.py  create_super_user.py  init_db.py  reset_sqlite_db.py
backend/app/services/: auth.py  bot_state.py  dashboard_broadcaster.py  dashboard_event_bus.py  execution_engine.py  geoblock.py  http_retry.py  market_discovery.py  market_ws.py  order_lifecycle.py  order_reconciler.py  orderbook.py  paper_trading.py  pnl.py  polymarket_clob.py  polymarket_errors.py  polymarket_gamma.py  polymarket_redeem_adapter.py  polymarket_resolution.py  polymarket_sdk.py  redeem_service.py  (+11 more)
(+133 files in other folders)
