[project]
name = "polymarket-bot-backend"
version = "0.1.0"
description = "FastAPI backend for Polymarket BTC Up/Down monitoring and paper trading"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "redis>=5.0.8",
  "websockets>=13.0",
]

[project.optional-dependencies]
test = [
  "aiosqlite>=0.20.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
