[project]
name = "polymarket-bot-backend"
version = "0.1.0"
description = "FastAPI backend for Polymarket BTC Up/Down monitoring and paper trading"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.2",
  "redis>=5.0.8",
  "websockets>=13.0",
  "celery[redis]>=5.4.0",
  "cryptography>=42.0.0",
  "eth-account>=0.13.0",
  "pycryptodome>=3.20.0",
  "py-clob-client-v2>=0.1.0",
]

[project.scripts]
polymarket = "app.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
